Bidding, confirm load and history and create load code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.appcompat.widget.Toolbar
             style="@style/toolbar"
             android:id="@+id/toolbar"
@@ -40,8 +41,8 @@
                     android:layout_marginTop="3dp"
                     />
             </RelativeLayout>
-
         </androidx.appcompat.widget.Toolbar>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -49,6 +50,17 @@
             android:layout_above="@id/bottom_nav"
             android:id="@+id/frame"
             />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/floting"
+            android:backgroundTint="@color/blue"
+            android:src="@drawable/plus"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="60dp"
+            android:layout_marginEnd="20dp"/>
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
