--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:background">@color/blue</item>
+        <item name="titleTextColor">@color/white</item>
     </style>
     <style parent="FirebaseUI" name="GreenTheme">
         <item name="colorPrimary">@color/blue</item>
@@ -25,13 +26,7 @@
     <style name="comfirm_load_textView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-    <style name="comfirm_loadTextView">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
 
