--- a/app/src/main/res/drawable/boder_comfirm_load.xml
+++ b/app/src/main/res/drawable/boder_comfirm_load.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:color="#000" android:width="2dp"/>
-    <corners android:radius="20dp"/>
-    <solid android:color="#EBF1FB"/>
+<stroke android:color="#8AC2EF" android:width="2dp"/>
+    <corners android:radius="10dp"/>
+    <solid android:color="#FFF"/>
 
 </shape>
