--- a/app/src/main/res/layout/history_fragement.xml
+++ b/app/src/main/res/layout/history_fragement.xml
@@ -2,12 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="80dp"
-        android:text="History fragment"
-        android:textSize="25sp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv"/>
 
 </LinearLayout>
