--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="blue">#4A8EF3</color>
+    <color name="blue">#3D84ED</color>
     <color name="white">#FFFFFF</color>
 </resources>
