--- a/app/src/main/res/layout/created_load.xml
+++ b/app/src/main/res/layout/created_load.xml
@@ -125,6 +125,7 @@
             <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="10"
+                android:textSize="10dp"
                 android:id="@+id/tvCount"
                 android:layout_margin="10dp"
 
