--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Transporter"
+                    android:text="User Name"
+                    android:id="@+id/tvUserName"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     />
@@ -37,6 +38,7 @@
                     android:background="@drawable/profile"
                     android:layout_alignParentEnd="true"
                     android:padding="5dp"
+                    android:id="@+id/civProfile"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="3dp"
                     />
